# MoDeFL

./: .gitignore  .gitmodules  Actor.py  Initiator.py  Makefile  README.md  actor_addresses.txt  initiate.sh  main.py  pyproject.toml  setupScript.sh  startActor.sh  startAndInitiate.sh  startLocalActors.sh
model/: AggregationUtils.py  DFLv1Model.py  DFLv1Strategy.py  DFLv2Strategy.py  DFLv3Strategy.py  DFLv4Strategy.py  DFLv5Strategy.py  DFLv6Strategy.py  DFLv7Strategy.py  DFLv8Strategy.py  IDFLModel.py  IDFLStrategy.py  LearningStrategy.py  ModelUpdateMarket.py  SerializationUtils.py
network/: Compression.py  GRPCInitializationService.py  GRPCModelUpdateService.py  IInitializationService.py  IModelUpdateService.py  InitializationService.py  ModelUpdateService.py  NetworkUtils.py  PartialDeviceParticipation.py
network/protobuf/: Initialization.proto  ModelUpdate.proto
resources/: actor_addresses_1_B.txt  actor_addresses_8.txt  actor_addresses_dflv3.txt  actor_adjacency.txt  actor_adjacency_4_line.txt  actor_adjacency_4_star.txt  actor_adjacency_dflv3.txt  addr_sanitycheck.txt  default_config.json
resources/config/: config_sanitycheck.json  dflv1.json  dflv2.json  dflv3.json  dflv4.json  dflv5.json  dflv6.json  dflv7.json  dflv7a.json  dflv7b.json  dflv7c.json  dflv8.json
scripts/: initiate.sh  setupScript.sh  startActor.sh  startAndInitiate.sh  startLocalActors.sh
scripts/experiments/: gridSearchLearningRate.sh  gridSearchLearningType.sh
utils/: CommunicationLogger.py  ConfigurationUtils.py  PartitioningUtils.py  PerformanceLogger.py
(+2 files in other folders)
