[project]
name = "modefl"
version = "0.1.1"
description = "Modular Decentralized Federated Learning Framework"
authors = [
    {name = "ywcb00"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "llvmlite (>=0.46.0,<0.47.0)",
    "sparse (>=0.17.0,<0.18.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "grpcio-tools (>=1.78.0,<2.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "grpcio (>=1.78.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
